--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ielkanyuk/blackjack-card-counter#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
